add linkedin meta datas

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     <meta name="language" content="fr">
     <link rel="icon" href="<%= BASE_URL %>cocolor.ico">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="cocolorico powered by @evifere">
-    <meta name="twitter:site" content="@cocoricorly">
-    <meta name="twitter:image" content="http://evifere.lescigales.org/cocolorico/logo.png" />
+    <meta name="twitter:title" content="cocolorico powered by @3v1f323">
+    <meta name="twitter:site" content="@3v1f323">
+    <meta name="twitter:image" content="https://evifere.github.io/cocolorico/logo.png" />
     <meta name="twitter:description" content="Générateur de coloriage">
     <meta name="twitter:text:title" content="cocolorico">
     <meta name="twitter:app:name:iphone" content="cocolorico">
@@ -22,6 +22,11 @@
     <meta name="twitter:app:id:ipad" content="">
     <meta name="twitter:app:name:googleplay" content="cocolorico">
     <meta name="twitter:app:id:googleplay" content="">
+    <meta property="og:title" content="Cocolorico"/>
+    <meta property="og:image" content="https://evifere.github.io/cocolorico/logo.png"/>
+    <meta property="og:description" content="Générateur de coloriage"/>
+    <meta property="og:url" content="https://evifere.github.io/cocolorico/" />
+
     <title>cocolorico</title>
   </head>
   <body>
